# gcrm

./: .gitignore  README.md  go.mod  main.go
.claude/: launch.json
.github/workflows/: ci.yml  pilot-release.yml  release.yml
assets/css/: admin.css
assets/js/: admin.js
desktop/: README.md  RELEASE.md  go.mod  index.html  package-lock.json  package.json  vite.config.js
desktop/scripts/: gen-icons.sh
desktop/src/: App.svelte  app.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: brain.rs  chat.rs  convo.rs  lib.rs  main.rs  pack.rs  path_env.rs  pool.rs
desktop/src/lib/: Brain.svelte  Chat.svelte  Connect.svelte  ModelChip.svelte  Pool.svelte  Queue.svelte  Settings.svelte  md.js  prefs.js
internal/ai/: client.go  worker.go
internal/store/: aijobs.go  auth.go  customers.go  keys.go  store.go
internal/web/: api.go  auth.go  customers.go  reviews.go  settings.go  skillpack.go  web.go
scripts/: gcrm.ps1  gcrm.sh
templates/: customer_detail.html  customers.html  dashboard.html  layout.html  login.html  reviews.html  settings.html  setup.html
